--- a/style/douyin.css
+++ b/style/douyin.css
@@ -15,6 +15,7 @@ body, html {
     right: -50px;
     bottom: -50px;
     left: -50px;
+    transform: scale(1.5);
     background-image: url("https://images.freeimages.com/images/small-previews/815/birds-ii-1379356.jpg");
     background-repeat: no-repeat;
     background-size: cover;
